--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,14 @@
         "xlocmon": "cpp",
         "xloctime": "cpp",
         "thread": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "atomic": "cpp",
+        "chrono": "cpp",
+        "cstdarg": "cpp",
+        "iterator": "cpp",
+        "memory_resource": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp",
+        "string_view": "cpp"
     }
 }
