--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,8 @@
         "optional": "cpp",
         "ratio": "cpp",
         "string_view": "cpp",
-        "condition_variable": "cpp"
+        "condition_variable": "cpp",
+        "concepts": "cpp",
+        "mutex": "cpp"
     }
 }
